[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "stl-tool"
version = "0.0"
authors = [
  {name = "Gregorio Marchesini", email = "gremar@kth.se"},
]
readme = "README.md"
dependencies = [
  "cvxpy[mosek,gurobi]",
  "matplotlib",
  "numpy",
  "pycddlib",
  "tqdm",
  "numpy-stl",
  "control",
  "casadi"
]

[tool.setuptools.packages.find]
where = ["."]
